--- a/presentation/spark_hands_on.tex
+++ b/presentation/spark_hands_on.tex
@@ -1303,7 +1303,7 @@ sbt "run-main psug.hands.on.exercise08.DisplayResult"
 
 \begin{frame}
 
-  \frametitle{What did we saw : Transformation and Action}
+  \frametitle{What did we saw : Transformations and Actions}
   
   \LARGE
   \begin{center}
