--- a/presentation/spark_hands_on.tex
+++ b/presentation/spark_hands_on.tex
@@ -1302,8 +1302,42 @@ sbt "run-main psug.hands.on.exercise08.DisplayResult"
 \section{Conclusion}
 
 \begin{frame}
+  \frametitle{What did we do}
 
-  \frametitle{What did we saw : Transformations and Actions}
+  \Large
+  \begin{columns}[T] % align columns
+    \begin{column}{.48\textwidth}
+      \begin{itemize}
+        \item Init Spark Context
+        \item Transform List to RDD
+        \item Transformation on RDD
+        \item Action on RDD
+        \item Stop Spark Context
+        \item Load File as RDD
+        \item Key/Value RDD
+        \item SqlContext and Data Frame
+      \end{itemize}
+    \end{column}%
+
+    \hfill%
+    \begin{column}{.48\textwidth}
+      \begin{itemize}
+        \item Load JSON as Data Frame
+        \item Transform Data Frame to RDD
+        \item Drop null value in a Data Frame
+        \item Save RDD to JSON File
+        \item Perform Sampling
+        \item Temporary Tables
+        \item Train and use a Machine Learning Model
+      \end{itemize}
+    \end{column}%
+  \end{columns}
+  \normalsize
+\end{frame}
+
+\begin{frame}
+
+  \frametitle{Transformations and Actions}
   
   \LARGE
   \begin{center}
