--- a/presentation/spark_hands_on.tex
+++ b/presentation/spark_hands_on.tex
@@ -1310,8 +1310,8 @@ sbt "run-main psug.hands.on.exercise08.DisplayResult"
       \begin{itemize}
         \item Init Spark Context
         \item Transform List to RDD
-        \item Transformation on RDD
-        \item Action on RDD
+        \item Transformations on RDD
+        \item Actions on RDD
         \item Stop Spark Context
         \item Load File as RDD
         \item Key/Value RDD
@@ -1327,7 +1327,7 @@ sbt "run-main psug.hands.on.exercise08.DisplayResult"
         \item Drop null value in a Data Frame
         \item Save RDD to JSON File
         \item Perform Sampling
-        \item Temporary Tables
+        \item SQL Request on Temporary Tables
         \item Train and use a Machine Learning Model
       \end{itemize}
     \end{column}%
@@ -1356,6 +1356,16 @@ sbt "run-main psug.hands.on.exercise08.DisplayResult"
     \end{tabular}
   \end{center}
   \normalsize
+\end{frame}
+
+\begin{frame}
+
+  \frametitle{Et c'est fini !}
+  
+  
+  \begin{center}
+    \Huge Des questions ?\normalsize
+  \end{center}
 \end{frame}
 
 
